Bug 1787008 - More consistently keep listener alive in test_color_scheme_browser.xhtml. r=nika a=test-only DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D191665

--- a/layout/base/tests/chrome/test_color_scheme_browser.xhtml
+++ b/layout/base/tests/chrome/test_color_scheme_browser.xhtml
@@ -74,8 +74,11 @@
             b.addProgressListener(listener);
           });
           info(`Calling b.loadURI for ${b.parentNode.id}`);
+          // Keep the listener alive, since it's a weak ref otherwise.
+          window.ALIVE_LISTENER = listener;
           b.loadURI(null /*blank*/, { triggeringPrincipal });
           await loaded;
+          delete window.ALIVE_LISTENER;
         }
       });
       async function getBrowserColorScheme(browser) {
