--- a/browser/components/preferences/dialogs/sitePermissions.css
+++ b/browser/components/preferences/dialogs/sitePermissions.css
@@ -3,10 +3,10 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 
 .website-name,
-hbox.website-status {
-  overflow: hidden; /* Allows equal sizing combined with width="0" */
+label.website-status {
+  overflow: hidden;
+  text-overflow: ellipsis;
   padding-inline-start: 7px;
-  align-items: center;
 }
 
 #permissionsBox {
@@ -23,35 +23,24 @@ hbox.website-status {
 
 #permissionsBox > richlistitem > hbox {
   flex: 1;
+  align-items: center;
 }
 
-#siteCol {
-  flex: 3 3 auto;
-}
-
-.website-name {
-  flex: 3 3;
-}
-
-#statusCol {
-  flex: 1 auto;
-}
-
-.website-status {
-  flex: 1;
-}
-
-/* TODO(bug 1802993): Seems this could be on .website-name instead of label? */
 #siteCol,
+.website-name {
+  flex: 1;
+  width: 0; /* Don't make our intrinsic size affect our final size */
+}
+
 #statusCol,
-.website-name > label,
 .website-status {
-  width: 75px;
+  width: 25%;
 }
 
 menulist.website-status {
-  margin: 1px;
-  margin-inline-end: 5px;
+  margin-block: 1px;
+  margin-inline: 0 5px;
+  width: calc(25% - 5px);
 }
 
 #browserNotificationsPermissionExtensionContent,
