Bug 1856592 - Split legacy behavior related to top level about:blank content script matching into its own test task. r=robwu, a=test-only
Splitting the two tests in two separate test tasks seems to be reducing the high intermittency, e.g. in this try push
it did only fail once:
- https://treeherder.mozilla.org/jobs?repo=try&revision=a159e96322fb8f105ce54b8bc1ab9348e4e619ba&selectedTaskRun=GZZ7Zb-vTV-xmL2C_uVAjw.0

Another patch on top of this one applies a few more changes that seems to be enough to stop the test task running with the legacy
matchAboutBlank behaviors in the remaining case (but I'd still prefer the two scenario to be covered by two separate test tasks
and so I'm still attaching the set of changes in this patch).

Differential Revision: https://phabricator.services.mozilla.com/D191983

--- a/toolkit/components/extensions/test/mochitest/test_ext_contentscript_about_blank.html
+++ b/toolkit/components/extensions/test/mochitest/test_ext_contentscript_about_blank.html
@@ -115,13 +115,7 @@ add_task(async function test_contentscript_about_blank() {
   await extension.unload();
 });
 
-add_task(async function top_level_about_blank() {
-  // This is the default behavior, but fix pref value in case that is not the
-  // case. The flipped-pref case is tested later in this test.
-  // TODO bug 1856071: Remove this pref setter when the pref is removed.
-  await SpecialPowers.pushPrefEnv({
-    set: [["extensions.script_about_blank_without_permission", false]],
-  });
+async function top_level_about_blank({ legacyBehavior = false } = {}) {
   const content_scripts = [
     {
       match_about_blank: true,
@@ -213,6 +207,7 @@ add_task(async function top_level_about_blank() {
       browser.test.sendMessage("got_activeTab");
     });
   }
+
   let extension = ExtensionTestUtils.loadExtension({
     manifest: {
       content_scripts,
@@ -222,7 +217,7 @@ add_task(async function top_level_about_blank() {
     files,
     background,
   });
-  await extension.startup();
+
   async function openAboutBlankTab() {
     extension.sendMessage("openAboutBlankTab");
     await extension.awaitMessage("openAboutBlankTab_done");
@@ -235,6 +230,49 @@ add_task(async function top_level_about_blank() {
     extension.sendMessage("seenScripts_check", expected, description);
     await extension.awaitMessage("seenScripts_check_done");
   }
+
+  // TODO bug 1856071: Remove this pref setter when the pref is removed.
+  // This pref should be set to false by default, but we still explicitly
+  // set pref value to:
+  // (1) cover the legacy behavior
+  // (2) in case that is not the default anymore (e.g. if we had to uplift a
+  // patch to temporarily bring back the legacy behavior before have remove pref
+  // and support for the legacy behavior).
+  await SpecialPowers.pushPrefEnv({
+    set: [["extensions.script_about_blank_without_permission", legacyBehavior]],
+  });
+
+  // TODO bug 1856071: Remove this entire block when the pref is removed.
+  if (legacyBehavior) {
+    // Start of "Testing legacy behavior".
+    await extension.startup();
+    await openAboutBlankTab();
+
+    // Legacy behavior: tabs.executeScript works in top-level about:blank
+    // without granted activeTab.
+    await checkSeenScripts(
+      [
+        "1.matches_any_url_and_blank.js",
+        "2.does_not_care_about_exclude_matches_globs.js",
+        // While the standard behavior is to only run scripts on top-level
+        // null-principal about:blank when matches[] matches "all urls", the
+        // legacy behavior was to do so for any script that declared
+        // match_about_blank:true, independent of matches[].
+        "3.should_not_run_because_include_globs_is_set.js",
+        "5.should_not_run_because_matches_does_not_match_all_urls.js",
+        "get_seenScripts.js",
+      ],
+      "Any content script with match_about_blank:true should (legacy behavior)"
+    );
+
+    await closeAboutBlankTab();
+    await extension.unload();
+    await SpecialPowers.popPrefEnv();
+    return;
+    // End of "Testing legacy behavior".
+  }
+
+  await extension.startup();
   await openAboutBlankTab();
 
   info("Testing tabs.executeScript without activeTab/host permissions");
@@ -258,35 +296,17 @@ add_task(async function top_level_about_blank() {
   );
 
   await closeAboutBlankTab();
-
-  // TODO bug 1856071: Remove this block when the pref is removed.
-  info("Testing legacy behavior");
-  await SpecialPowers.popPrefEnv(); // Balances pushPrefEnv at start of task.
-  await SpecialPowers.pushPrefEnv({
-    set: [["extensions.script_about_blank_without_permission", true]],
-  });
-  await openAboutBlankTab();
-  // Legacy behavior: tabs.executeScript works in top-level about:blank
-  // without granted activeTab.
-  await checkSeenScripts(
-    [
-      "1.matches_any_url_and_blank.js",
-      "2.does_not_care_about_exclude_matches_globs.js",
-      // While the standard behavior is to only run scripts on top-level
-      // null-principal about:blank when matches[] matches "all urls", the
-      // legacy behavior was to do so for any script that declared
-      // match_about_blank:true, independent of matches[].
-      "3.should_not_run_because_include_globs_is_set.js",
-      "5.should_not_run_because_matches_does_not_match_all_urls.js",
-      "get_seenScripts.js",
-    ],
-    "Any content script with match_about_blank:true should (legacy behavior)"
-  );
-  await closeAboutBlankTab();
-  await SpecialPowers.popPrefEnv();
-  // End of "Testing legacy behavior".
-
   await extension.unload();
+  // TODO bug 1856071: Remove this popPrefEnv call when the pref is removed.
+  await SpecialPowers.popPrefEnv();
+}
+
+add_task(async function test_toplevel_aboutblank_match_with_permissions() {
+  await top_level_about_blank({ legacyBehavior: false });
+});
+
+add_task(async function test_toplevel_aboutblank_match_without_permissions() {
+  await top_level_about_blank({ legacyBehavior: true });
 });
 
 </script>
