Bug 1861669 - Approach 1: Make vibrancy work again on OSX. r=dao,desktop-theme-reviewers, a=dsmith
macOS needs a transparent root background in order for vibrancy to work
(showing the contents behind the window). Bug 1843044 broke this.

Long ago, we used to do vibrancy more aggressively (on the titlebar
etc), but now the sidebar is the only thing that has that left.

This fixes it, but it's a bit action-at-a-distance.

Differential Revision: https://phabricator.services.mozilla.com/D192102

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -10,6 +10,9 @@
 :root {
   appearance: none;
 
+  /* This allows vibrancy to work, see bug 1861669 */
+  background-color: transparent;
+
   --arrowpanel-field-background: light-dark(rgba(249, 249, 250, .3), rgba(12, 12, 13, .3));
 
   --sidebar-border-color: hsla(240, 5%, 5%, .1);
