--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -1122,6 +1122,12 @@ menulist[indicator=true] > menupopup menuitem[indicator=true]:not([image]) > .me
   margin-inline-end: 4px;
 }
 
+#activeLanguages,
+#selectedLocales {
+  min-height: 15em;
+  contain: size;
+}
+
 #selectedLocales > richlistitem {
   padding-inline-start: 13px;
 }
@@ -1136,6 +1142,13 @@ menulist[indicator=true] > menupopup menuitem[indicator=true]:not([image]) > .me
 
 .action-button {
   margin-inline-end: 0;
+}
+
+.languages-grid {
+  flex: 1;
+  display: grid;
+  grid-template-rows: 1fr auto;
+  grid-template-columns: 1fr auto;
 }
 
 /* Menulist styles */
