Bug 1861669 - Make vibrancy work again on OSX. r=dao, a=dmeehan

--- a/browser/themes/osx/browser.css
+++ b/browser/themes/osx/browser.css
@@ -9,6 +9,7 @@
 
 :root {
   appearance: none;
+  background-color: transparent;
 
   --toolbar-non-lwt-bgcolor: -moz-dialog;
   --toolbar-non-lwt-textcolor: -moz-dialogtext;
