--- a/editor/composer/res/EditorOverride.css
+++ b/editor/composer/res/EditorOverride.css
@@ -53,12 +53,14 @@ a:link {
 input, button, textarea {
   user-select: all !important;
   -moz-user-input: auto !important;
+  -moz-user-focus: none !important;
 }
 
 /* XXX Still need a better way of blocking other events to these widgets */
 select, input[disabled], input[type="checkbox"], input[type="radio"], input[type="file"] {
   user-select: all !important;
   -moz-user-input: none !important;
+  -moz-user-focus: none !important;
 }
 
 input[type="hidden"] {
@@ -198,6 +200,7 @@ a[\_moz_anonclass="mozTableAddColumnBefore"] {
   background-repeat: no-repeat;
   background-position: center center;
   user-select: none !important;
+  -moz-user-focus: none !important;
 }
 
 a[\_moz_anonclass="mozTableAddColumnBefore"]:hover {
@@ -219,6 +222,7 @@ a[\_moz_anonclass="mozTableAddColumnAfter"] {
   background-repeat: no-repeat;
   background-position: center center;
   user-select: none !important;
+  -moz-user-focus: none !important;
 }
 
 a[\_moz_anonclass="mozTableAddColumnAfter"]:hover {
@@ -240,6 +244,7 @@ a[\_moz_anonclass="mozTableRemoveColumn"] {
   background-repeat: no-repeat;
   background-position: center center;
   user-select: none !important;
+  -moz-user-focus: none !important;
 }
 
 a[\_moz_anonclass="mozTableRemoveColumn"]:hover {
@@ -261,6 +266,7 @@ a[\_moz_anonclass="mozTableAddRowBefore"] {
   background-repeat: no-repeat;
   background-position: center center;
   user-select: none !important;
+  -moz-user-focus: none !important;
 }
 
 a[\_moz_anonclass="mozTableAddRowBefore"]:hover {
@@ -282,6 +288,7 @@ a[\_moz_anonclass="mozTableAddRowAfter"] {
   background-repeat: no-repeat;
   background-position: center center;
   user-select: none !important;
+  -moz-user-focus: none !important;
 }
 
 a[\_moz_anonclass="mozTableAddRowAfter"]:hover {
@@ -303,6 +310,7 @@ a[\_moz_anonclass="mozTableRemoveRow"] {
   background-repeat: no-repeat;
   background-position: center center;
   user-select: none !important;
+  -moz-user-focus: none !important;
 }
 
 a[\_moz_anonclass="mozTableRemoveRow"]:hover {
