--- a/layout/style/contenteditable.css
+++ b/layout/style/contenteditable.css
@@ -55,6 +55,7 @@ a:link:read-write {
 *|*:read-write > textarea:read-only {
   user-select: all;
   -moz-user-input: auto !important;
+  -moz-user-focus: none !important;
 }
 
 /* XXX Still need a better way of blocking other events to these widgets */
@@ -69,6 +70,7 @@ input[contenteditable="true"][type="radio"],
 input[contenteditable="true"][type="file"] {
   user-select: all;
   -moz-user-input: none !important;
+  -moz-user-focus: none !important;
 }
 
 *|*:read-write > input[type="hidden"],
@@ -199,6 +201,7 @@ a[\_moz_anonclass="mozTableAddColumnBefore"] {
   background-repeat: no-repeat;
   background-position: center center;
   user-select: none;
+  -moz-user-focus: none !important;
 }
 
 a[\_moz_anonclass="mozTableAddColumnBefore"]:hover {
@@ -220,6 +223,7 @@ a[\_moz_anonclass="mozTableAddColumnAfter"] {
   background-repeat: no-repeat;
   background-position: center center;
   user-select: none;
+  -moz-user-focus: none !important;
 }
 
 a[\_moz_anonclass="mozTableAddColumnAfter"]:hover {
@@ -241,6 +245,7 @@ a[\_moz_anonclass="mozTableRemoveColumn"] {
   background-repeat: no-repeat;
   background-position: center center;
   user-select: none;
+  -moz-user-focus: none !important;
 }
 
 a[\_moz_anonclass="mozTableRemoveColumn"]:hover {
@@ -262,6 +267,7 @@ a[\_moz_anonclass="mozTableAddRowBefore"] {
   background-repeat: no-repeat;
   background-position: center center;
   user-select: none;
+  -moz-user-focus: none !important;
 }
 
 a[\_moz_anonclass="mozTableAddRowBefore"]:hover {
@@ -283,6 +289,7 @@ a[\_moz_anonclass="mozTableAddRowAfter"] {
   background-repeat: no-repeat;
   background-position: center center;
   user-select: none;
+  -moz-user-focus: none !important;
 }
 
 a[\_moz_anonclass="mozTableAddRowAfter"]:hover {
@@ -304,6 +311,7 @@ a[\_moz_anonclass="mozTableRemoveRow"] {
   background-repeat: no-repeat;
   background-position: center center;
   user-select: none;
+  -moz-user-focus: none !important;
 }
 
 a[\_moz_anonclass="mozTableRemoveRow"]:hover {
